--- a/templates/_base.html
+++ b/templates/_base.html
@@ -87,6 +87,7 @@
   {% block scripts %}
   <script src="{% static 'js/main.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/htmx.min.js' %}"></script>
   {% endblock %}
 </body>
 
